Added doc strings and TODOs

--- a/tessla/translations/en.json
+++ b/tessla/translations/en.json
@@ -3,11 +3,13 @@
         "step": {
             "user": {
                 "data": {
-                    "entity_input": "Entity",
-                    "stream_name_input": "Stream",
+                    "entity_input_1": "Entity 1",
+                    "entity_input_2": "Entity 2",
+                    "stream_name_input_1": "Stream 1",
+                    "stream_name_input_2": "Stream 2",
                     "tessla_spec_input": "TeSSLa Specification"
                 },
-                "description": "This is the description :)",
+                "description": "Select your entities and enter a stream name. Please make sure the stream name matches the name of the input stream in your Tessla specification",
                 "title": "Configure TeSSLa"
             }
         }
